--- a/PruebaTecnica/src/main/resources/application.properties
+++ b/PruebaTecnica/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/dbpruebatecnica?useUnicode=tru
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 server.port=9898
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration,org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration,
